[project]
name = "mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.20",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "langgraph-cli[inmem]>=0.1.75",
]
